@@ -1506,15 +1506,22 @@ namespace GraphX.Controls
         }
 
         /// <summary>
-        /// Clear graph visual layout (all edges and vertices)
+        /// Clear graph visual layout (all edges, vertices and their states storage if any)
         /// </summary>
         /// <param name="removeCustomObjects">Also remove any possible custom objects</param>
-        public void ClearLayout(bool removeCustomObjects = true)
+        /// <param name="clearLogicCore">Also clear LogiCore data</param>
+        public void ClearLayout(bool removeCustomObjects = true, bool clearLogicCore = false)
         {
             RemoveAllEdges();
             RemoveAllVertices();
             if(removeCustomObjects)
                 base.Children.Clear();
+            if (StateStorage != null)
+                StateStorage.Dispose();
+            StateStorage = new StateStorage<TVertex, TEdge, TGraph>(this);
+
+            if (clearLogicCore && LogicCore != null)
+                LogicCore.Clear();
         }
         #endregion
     }
